--- a/src/NECN-succession.csproj
+++ b/src/NECN-succession.csproj
@@ -25,12 +25,23 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Landis.Core" Version="3.0.1" />
+        <!--<PackageReference Include="Landis.Core" Version="3.0.1" />-->
     <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
 
 	</ItemGroup>
-  
+   <ItemGroup>
+        <ProjectReference Include="..\..\Library-Core\src\Core\Landis.Core.csproj" />
+        <ProjectReference Include="..\..\Library-Climate\src\climate-generator.csproj" />
+        <ProjectReference Include="..\..\Library-Initial-Community\initial-community.csproj" />
+        <ProjectReference Include="..\..\Library-Metadata\src\Metadata.csproj" />
+        <ProjectReference Include="..\..\Library-Parameters\src\parameter-lib.csproj" />
+        <ProjectReference Include="..\..\Library-Succession\src\library-succession.csproj" />
+        <ProjectReference Include="..\..\Library-Universal-Cohort\universal-cohort.csproj" />
+
+	</ItemGroup>
+
+    <!-- 
   <ItemGroup>
     <Reference Include="Landis.Library.Climate-v5">
       <HintPath>lib\Landis.Library.Climate-v5.dll</HintPath>
@@ -53,5 +64,6 @@
 		<Reference Include="MathNet.Numerics">
 		</Reference>  
 </ItemGroup>
+        -->
 </Project>
 
